--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,10 +1,7 @@
-ref: fedora/${basearch}/coreos/testing-devel
 include:
+  - workstation-ostree-config/fedora-silverblue.yaml
   - fedora-coreos-config/manifests/ignition-and-ostree.yaml
   - fedora-coreos-config/manifests/file-transfer.yaml
-  - workstation-ostree-config/fedora-common-ostree-pkgs.yaml
-  - workstation-ostree-config/fedora-common-ostree.yaml
-  - workstation-ostree-config/gnome-desktop-pkgs.yaml
 
 automatic-version-prefix: "${releasever}.<date:%Y%m%d>.dev"
 mutate-os-release: "${releasever}"
@@ -31,6 +28,7 @@ etc-group-members:
   - sudo
   - systemd-journal
   - adm
+  - libvirt
 
 check-passwd:
   type: "file"
@@ -101,11 +99,6 @@ packages-aarch64:
 
 releasever: "32"
 
-rojig:
-  license: MIT
-  name: fedora-coreos
-  summary: Fedora CoreOS testing-devel
-
 repos:
   - fedora-coreos-pool
   # these repos are there to make it easier to add new packages to the OS and to
@@ -115,17 +108,8 @@ repos:
   - fedora-updates
   - fedora-modular
   - fedora-updates-modular
+  - fedora-rawhide
 
-add-commit-metadata:
-  fedora-coreos.stream: testing-devel
-
-  etc-group-members:
-    # Add the docker group to /etc/group
-    # https://github.com/coreos/fedora-coreos-tracker/issues/2
-    # This will be no longer needed when systemd-sysusers has been implemented:
-    # https://github.com/projectatomic/rpm-ostree/issues/49
-    - libvirt
-  
-  packages:
-    - libvirt-daemon-kvm
-    - ksmtuned
+packages:
+  - libvirt-daemon-kvm
+  - ksmtuned
