Increase image size

--- a/image.yaml
+++ b/image.yaml
@@ -1,1 +1,18 @@
-fedora-coreos-config/image.yaml
+# This replaces image.ks
+# size is the target disk size in GB.
+size: 20
+
+extra-kargs:
+    # Disable SMT on systems vulnerable to MDS or any similar future issue.
+    - mitigations=auto,nosmt
+    # https://github.com/coreos/fedora-coreos-tracker/issues/292
+    # https://fedoraproject.org/wiki/Changes/CGroupsV2
+    - systemd.unified_cgroup_hierarchy=0
+
+
+# Optional remote by which to prefix the deployed OSTree ref
+ostree-remote: fedora
+
+# After this, we plan to add support for the Ignition
+# storage/filesystems sections.  (Although one can do
+# that on boot as well)
