--- a/fedora-silverblue-custom-base.yaml
+++ b/fedora-silverblue-custom-base.yaml
@@ -110,86 +110,13 @@ remove-from-packages:
   - [NetworkManager, /usr/lib64/NetworkManager/.*/libnm-settings-plugin-ifcfg-rh.so]
 
 packages:
-  # - fedora-release-coreos
-  - fedora-release-silverblue
-  - fedora-repos-ostree
-  # # CL ships this.
-  # - moby-engine
-  # # User metrics
-  # - fedora-coreos-pinger
-  # Updates
-  # - zincati
-  # Security
-  - selinux-policy-targeted
-  - polkit
-  # System setup
-  - afterburn
-  - afterburn-dracut
-  - passwd
-  # SSH
-  - openssh-server openssh-clients
-  # Containers
-  - podman skopeo runc systemd-container
-  - fuse-overlayfs slirp4netns
-  # Remote IPC for podman
-  - libvarlink-util
-  # Networking
-  - nfs-utils-coreos
-  - NetworkManager hostname
-  - iproute-tc
-  - adcli
-  ## Teaming https://github.com/coreos/fedora-coreos-config/pull/289 and http://bugzilla.redhat.com/1758162
-  - NetworkManager-team teamd
-  # Static firewalling
-  # - iptables nftables iptables-nft iptables-services
-  - nftables iptables-nft
-  # Interactive Networking configuration during coreos-install
-  # - NetworkManager-tui
-  # Storage
-  - cloud-utils-growpart
-  - lvm2 iscsi-initiator-utils sg3_utils
-  - device-mapper-multipath
-  - xfsprogs e2fsprogs btrfs-progs mdadm
-  - cryptsetup
-  # - cifs-utils
-  # Time sync
-  - chrony
-  # Allow communication between sudo and SSSD 
-  # for caching sudo rules by SSSD.
-  # https://github.com/coreos/fedora-coreos-tracker/issues/445
-  - libsss_sudo
-  # Extra runtime
-  - sssd shadow-utils
-  # There are things that write outside of the journal still (such as the classic wtmp, etc.)
-  # (auditd also writes outside the journal but it has its own log rotation.)
-  # Anything package layered will also tend to expect files dropped in
-  # /etc/logrotate.d to work.  Really, this is a legacy thing, but if we don't
-  # have it then people's disks will slowly fill up with logs.
-  - logrotate
-  # Used by admins interactively
-  - sudo coreutils attr less tar xz gzip bzip2
-  # - socat net-tools bind-utils
-  - socat net-tools ldns-utils
-  - bash-completion
-  - openssl
-  - vim-minimal
-  - lsof
-  - ipvsadm
-  # file-transfer: note fuse-sshfs is not in RHEL
-  # so we can't put it in file-transfer.yaml
-  - fuse-sshfs
-  # User experience
-  - console-login-helper-messages-issuegen
-  - console-login-helper-messages-motdgen
-  - console-login-helper-messages-profile
-  - toolbox
-  # CoreOS Installer
-  # - coreos-installer coreos-installer-systemd
-  - coreos-installer
-  # i18n
-  - kbd
-  # Parsing/Interacting with JSON data
-  - jq
+  ### fedora-silverblue
+  - desktop-backgrounds-gnome
+  - gnome-shell-extension-background-logo
+  - pinentry-gnome3
+  # Does it really still make sense to ship Qt by default if we
+  # expect people to run apps in containers?
+  - qgnomeplatform
   ### gnome-desktop-pkg
   - ModemManager
   - NetworkManager-adsl
@@ -255,17 +182,31 @@ packages:
   - xdg-user-dirs-gtk
   - yelp
   ### fedora-common-ostree
+  - fedora-release-silverblue
   - git-core
   - lvm2
   - rpm-ostree
   # Container management
   - buildah
+  - podman
   - skopeo
   - toolbox
   # Flatpak support
   - flatpak
   - flatpak-builder
   - xdg-desktop-portal
+  # HFS filesystem tools for Apple hardware
+  # See https://github.com/projectatomic/rpm-ostree/issues/1380
+  - hfsplus-tools
+  # Bundle the minimal -devel packages needed to build a kernel.
+  # This is needed because we can't rely on layering to install these
+  # due to version conflicts with the base image.
+  - glibc-devel
+  - kernel-devel
+  - elfutils-libelf-devel
+  # Contains default ostree remote config to be used on client's
+  # system for fetching ostree update
+  - fedora-repos-ostree
 
 # This thing is crying out to be pulled into systemd, but that hasn't happened
 # yet.  Also we may want to add to rpm-ostree something like arch negation;
