--- a/manifest.yaml
+++ b/manifest.yaml
@@ -32,6 +32,7 @@ etc-group-members:
   - sudo
   - systemd-journal
   - adm
+  - libvirt
 
 check-passwd:
   type: "file"
@@ -43,15 +44,6 @@ check-groups:
 # ⚠⚠⚠ ONLY TEMPORARY HACKS ALLOWED HERE; ALL ENTRIES NEED TRACKER LINKS ⚠⚠⚠
 # See also the version of this in fedora-coreos.yaml
 postprocess:
-  # This will be dropped once rpm-ostree because module-aware.
-  # https://github.com/projectatomic/rpm-ostree/issues/1542#issuecomment-419684977
-  # https://github.com/projectatomic/rpm-ostree/issues/1435
-  - |
-    #!/usr/bin/env bash
-    set -xeuo pipefail
-    for x in /etc/yum.repos.d/*modular.repo; do
-      sed -i -e 's,enabled=[01],enabled=0,' ${x}
-    done
   # Disable the default-enabled AuthorizedKeysFile directive so we can
   # override it in a config fragment
   # https://github.com/coreos/fedora-coreos-tracker/issues/139
@@ -109,7 +101,7 @@ packages:
   - htop
   - mpv
   - youtube-dl
-  - awscli
   - gimp
   - vlc
   - ncmpcpp
+  - podman-compose
