Disable selinux in grub

--- a/live/EFI/fedora/grub.cfg
+++ b/live/EFI/fedora/grub.cfg
@@ -28,6 +28,6 @@ set timeout=5
 
 ### BEGIN /etc/grub.d/10_linux ###
 menuentry 'Fedora CoreOS (Live)' --class fedora --class gnu-linux --class gnu --class os {
-	linux /images/vmlinuz @@KERNEL-ARGS@@ ignition.firstboot ignition.platform.id=metal rd.live.image rd.live.ram=1 intel_iommu=on amd_iommu=on iommu=pt console=tty0 console=ttyS1,115200n8
+	linux /images/vmlinuz @@KERNEL-ARGS@@ ignition.firstboot ignition.platform.id=metal rd.live.image rd.live.ram=1 intel_iommu=on amd_iommu=on iommu=pt console=tty0 console=ttyS1,115200n8 selinux=0
 	initrd /images/initramfs.img
 }
