--- a/manifest.yaml
+++ b/manifest.yaml
@@ -69,8 +69,8 @@ repos:
   # use `cosa fetch --update-lockfile`; but note that all package versions are
   # still pinned
   - fedora
-  - fedora-updates
   - fedora-modular
+  - fedora-updates
   - fedora-updates-modular
   - fedora-rawhide
   - rpmfusion-free
@@ -104,3 +104,4 @@ packages:
   - gimp
   - ncmpcpp
   - podman-compose
+  - xorg-x11-drv-amdgpu
