--- a/manifest.yaml
+++ b/manifest.yaml
@@ -26,11 +26,23 @@ initramfs-args:
   - --omit=multipath
   - --omit=iscsi
 
+ignore-removed-users:
+  - root
+ignore-removed-groups:
+  - root
 etc-group-members:
   - wheel
+  - sudo
   - systemd-journal
   - adm
   - libvirt
+
+check-passwd:
+  type: "file"
+  filename: "manifests/passwd"
+check-groups:
+  type: "file"
+  filename: "manifests/group"
 
 # ⚠⚠⚠ ONLY TEMPORARY HACKS ALLOWED HERE; ALL ENTRIES NEED TRACKER LINKS ⚠⚠⚠
 # See also the version of this in fedora-coreos.yaml
@@ -71,7 +83,7 @@ packages:
   - jq
   ### Custom
   - libva-utils xorg-x11-drv-amdgpu vulkan-tools
-  - libvirt-daemon-kvm ksmtuned libvirt-client
+  - libvirt-daemon-kvm ksmtuned libvirt-client virt-viewer
   - hdparm lm_sensors
   - ipmitool
   - podman-compose
@@ -81,7 +93,6 @@ packages:
   ### Extra
   - youtube-dl
   - htop
-  - virt-viewer
   - tmux xclip
   - vim-enhanced
   # This also adds useful codecs to the system
