--- a/live/isolinux/isolinux.cfg
+++ b/live/isolinux/isolinux.cfg
@@ -67,7 +67,7 @@ label linux
   menu label ^Fedora CoreOS (Live)
   menu default
   kernel /images/vmlinuz
-  append initrd=/images/initramfs.img @@KERNEL-ARGS@@ ignition.firstboot ignition.platform.id=metal rd.neednet=0 rd.live.image rd.live.ram=1 intel_iommu=on amd_iommu=on iommu=pt console=tty0 console=ttyS1,115200n8 selinux=0
+  append initrd=/images/initramfs.img @@KERNEL-ARGS@@ ignition.firstboot ignition.platform.id=metal rd.neednet=0 intel_iommu=on amd_iommu=on iommu=pt console=tty0 console=ttyS1,115200n8 selinux=0
 
 menu separator # insert an empty line
 
