--- a/image.yaml
+++ b/image.yaml
@@ -1,1 +1,32 @@
-fedora-coreos-config/image.yaml
+# This replaces image.ks
+# size is the target disk size in GB.
+size: 8
+
+extra-kargs:
+    # Disable SMT on systems vulnerable to MDS or any similar future issue.
+    # - mitigations=auto,nosmt
+    # https://github.com/coreos/fedora-coreos-tracker/issues/292
+    # https://fedoraproject.org/wiki/Changes/CGroupsV2
+    - systemd.unified_cgroup_hierarchy=0
+    - ignition.firstboot
+    - ignition.platform.id=metal
+    - rd.neednet=0
+    - intel_iommu=on
+    - amd_iommu=on
+    - iommu=pt
+    - selinux=0
+
+# Kernel arguments to be used on first-boot.
+ignition-network-kcmdline:
+    # - 'rd.neednet=1'
+
+# Optional remote by which to prefix the deployed OSTree ref
+ostree-remote: fedora
+
+# We want read-only /sysroot to protect from unintentional damage.
+# https://github.com/ostreedev/ostree/issues/1265
+sysroot-readonly: true
+
+# After this, we plan to add support for the Ignition
+# storage/filesystems sections.  (Although one can do
+# that on boot as well)
