--- a/manifest.yaml
+++ b/manifest.yaml
@@ -79,7 +79,7 @@ packages:
   - afterburn
   - afterburn-dracut
   - socat ldns-utils
-  # Podman
+  # Containers
   - runc systemd-container catatonit
   - fuse-overlayfs slirp4netns
   - libvarlink-util
@@ -88,15 +88,21 @@ packages:
   - iscsi-initiator-utils sg3_utils
   - device-mapper-multipath
   - xfsprogs
+  # Allow communication between sudo and SSSD
   - libsss_sudo
-  #
   - xz gzip socat
   - iproute-tc
   - openssl
   - fuse-sshfs
+  # User experience
+  - console-login-helper-messages-issuegen
+  - console-login-helper-messages-motdgen
+  - console-login-helper-messages-profile
+  # CoreOS Installer
   - coreos-installer
+  # Parsing/Interacting with JSON data
   - jq
-  ### Custom
+  ## Custom
   - libva-utils xorg-x11-drv-amdgpu vulkan-tools
   - libvirt-daemon-kvm ksmtuned libvirt-client virt-viewer
   - hdparm lm_sensors
@@ -111,7 +117,6 @@ packages:
   - tmux xclip
   - vim-enhanced
   - gimp
-  # gnome components
   - eog
   # External repo
   - kubernetes-client
